useless section added

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,6 +41,12 @@
 
 <hr />
 
+<section class="sharda-sec">
+  <img src="./images/courseImgNew.jpeg">
+</section>
+
+<hr />
+
 <section class="coaches-sec">
   <h2>Our Experts</h2>
   <br /><br /><br />
