--- a/public/css/home.css
+++ b/public/css/home.css
@@ -93,6 +93,17 @@
   font-size: 1rem;
 }
 
+/* Sharda Section */
+
+.sharda-sec {
+  text-align: center;
+}
+
+.sharda-sec img {
+  width: 90%;
+  border-radius: 1rem;
+}
+
 /* Coaches Section */
 
 .coaches-sec {
