--- a/views/founder.handlebars
+++ b/views/founder.handlebars
@@ -13,7 +13,7 @@
       <br /><br />
       <p>She has given many workshops on Parenting, leadership, Vision Beard and
         Healing qualities of water. She has been awarded with the prestigious
-        'Vivekanad Changemaker Award' by Mentrox. Presently her focus is on
+        'Vivekanand Changemaker Award' by Mentrox. Presently her focus is on
         spreading an awareness amongst people that water which is so powerful
         has the potential to heal our lives. Let's respect it.</p>
       <br /><br />
